fixed spacing for There's a white space between the pet pic and the pic border at the top

--- a/app/assets/stylesheets/pages/_family_pet_index.scss
+++ b/app/assets/stylesheets/pages/_family_pet_index.scss
@@ -42,17 +42,23 @@
 }
 
 .family-pet-img {
-  height: 150px;
-  width: 149px;
+  display: flex;
+  height: 151px;
+  width: 150px;
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom: solid 1px #3E1E99;
   border-right: solid 1px #3E1E99;
-  margin-bottom: 5px;
+  border-left: solid .5px #3E1E99;
+  position: relative;
+  bottom: .8px;
+  right: 0.9px;
+
 }
 
 .family-pet-info {
+  padding-top: 5px;
   display: flex;
   justify-content: center;
 }
